# jarvis-substrate

./: .gitignore  README.md  pyproject.toml
cron-prompts/: _advice-actionable-jarvis.md  _advice-actionable-vibeswap.md  _advice-contribution-graph.md  _advice-mined-log.md  _primitives-pending.md  _skill-mining-log.md  _skill-mining-queue.md  odysseus-daily-cadence.md  odysseus-discovery.md  skill-mining.md
hooks/: atomic-reflection-gate.py  em-dash-augmentation-gate.py  hiero-gate.py  memory-preprocessor.py
jarvis/: __init__.py  graph.py  primitive.py  registry.py
memory/: _advice-contribution-graph.md  feedback_code-comment-why-only.md  feedback_design-loops-not-prompts.md  feedback_jarvis-authored-reply-transparency-tag.md  feedback_mechanism-deployment-as-comeback.md  feedback_odysseus-as-advisory-substrate.md  feedback_odysseus-daily-discussion-campaign.md  feedback_positive-vs-negative-contribution-decision.md  feedback_primitive-capture-vs-execution-throughput.md  feedback_spec-vs-deployed-severity-calibration.md  feedback_sync-primitive-monorepo-vs-current-state.md  feedback_websearch-before-saying-i-dont-know.md  feedback_will-empowers-agent-on-substrate-design.md  primitive_authorship-via-conditions-and-context.md  primitive_markdown-canonical-code-as-parser-layer.md  primitive_time-logic-anti-hallucination-gate.md  project_odysseus-mission-loop.md
scripts/: odysseus_discovery.py
skills/design-system/: SKILL.md
