[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-substrate"
version = "0.1.0"
description = "Programmatic access to the JARVIS markdown primitive corpus. Markdown stays canonical; this parses it into typed Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Will Glynn" }]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/WGlynn/jarvis-substrate"
Repository = "https://github.com/WGlynn/jarvis-substrate"

[tool.setuptools]
packages = ["jarvis"]
include-package-data = true

[tool.setuptools.package-data]
jarvis = ["../memory/*.md", "../cron-prompts/*.md", "../hooks/*.py", "../scripts/*.py"]
